--- a/index.htm
+++ b/index.htm
@@ -8,7 +8,7 @@
 </font>
 <font face="arial" color="black" size="4">
 <p> Я не придумал тему, поэтому расскажу вам про Pudge из Dota 2 </p>
-<img width="800" height="600" src="PUDGE.GIF">
+<img width="800" height="600" src="PUDGE.gif">
  <div id="контейнер">
  </div>
  <script>
